[tool.poetry]
name = "Aquire A Cipher"
version = "0.1.0"
description = "This program allows users to encode and decode messages using historical ciphers such as the Caesar Cipher, Morse Code, and many others. It also provides valuable insights into the fundamentals of encryption, the roles of women in cryptography, cybersecurity careers, and the importance of diversity in the field."
authors = ["JaNiah Harris"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
termcolor = "^2.1.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"